# NCAALacrosseData

./: .gitignore  CNAME  DESCRIPTION  LinkHarvesterScraper.R  LinkHarvesterTestScraper.Rmd  NCAAMensLacrosseMatchScraper.R  NCAAMensLacrosseMatchScraper.py  NCAAMensLacrossePlayerScraper.R  NCAAMensLacrossePlayerScraper.py  NCAAWomensLacrosseMatchScraper.R  NCAAWomensLacrosseMatchScraper.py  NCAAWomensLacrossePlayerScraper.R  NCAAWomensLacrossePlayerScraper.py  NCAAWomensSoccerMatchScraper.R  NCAAWomensSoccerTestMatchScraper.Rmd  NCAAWomensSoccerTestPlayerScraper.Rmd  README.md  app.py  build_lacrosse_urls.py  demo_setup.sh  generate_team_urls.py  goals_assists.vg.json  lacrosse.db  ncaa_mlax_teams.csv  pyproject.toml  setup.sh  working_pxp.Rmd
data/: ncaa_mens_lacrosse_matchstats_2020.csv  ncaa_mens_lacrosse_matchstats_2021.csv  ncaa_mens_lacrosse_matchstats_2022.csv  ncaa_mens_lacrosse_matchstats_2023.csv  ncaa_mens_lacrosse_matchstats_2024.csv  ncaa_mens_lacrosse_matchstats_2025.csv  ncaa_mens_lacrosse_matchstats_2026.csv  ncaa_mens_lacrosse_playerstats_2020.csv  ncaa_mens_lacrosse_playerstats_2021.csv  ncaa_mens_lacrosse_playerstats_2022.csv  ncaa_mens_lacrosse_playerstats_2023.csv  ncaa_mens_lacrosse_playerstats_2024.csv  ncaa_mens_lacrosse_playerstats_2025.csv  ncaa_womens_lacrosse_matchstats_2018.csv  ncaa_womens_lacrosse_matchstats_2019.csv  ncaa_womens_lacrosse_matchstats_2021.csv  ncaa_womens_lacrosse_matchstats_2022.csv  ncaa_womens_lacrosse_matchstats_2023.csv  ncaa_womens_lacrosse_matchstats_2024.csv  ncaa_womens_lacrosse_matchstats_2025.csv  (+13 more)
(+35 files in other folders)
