[project]
name = "ncaawomenslacrossedata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ncaa-stats-py==0.0.12",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
]

[tool.uv.sources]
ncaa-stats-py = { git = "https://github.com/Sports-Roster-Data/ncaa_stats_py" }
