[project]
name = "ncaalacrossedata"
version = "0.1.0"
description = "Scrapes NCAA lacrosse data from stats.ncaa.org"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "playwright>=1.58.0",
    "ncaa_stats_py",
]

[tool.uv.sources]
ncaa_stats_py = { git = "https://github.com/Sports-Roster-Data/ncaa_stats_py" }
